--- a/Prototype/Styles/CKstyle.css
+++ b/Prototype/Styles/CKstyle.css
@@ -14,13 +14,38 @@ body {
   font-family: "Alegreya Sans", serif;
 }
 
+
+/*------------HEADER-----------*/
+
 header {
   background-color: rgb(152,201,171);
 }
 
-header nav {
-  background-color: rgb(93,139,200);
+header nav ul {
+  list-style: none;
+  margin: 0 auto;
+  text-align: center;
 }
+
+header nav ul li {
+  width: 50%;
+  padding: 5px 0px;
+}
+
+header img {
+  float: left;
+  width: 20%;
+  padding: 10px;
+}
+
+header h1 {
+  font-size: .95em;
+  float: left;
+  padding-top: 20px;
+}
+
+
+/*-----------EVERYTHING ELSE----------*/
 
 div, section, main, aside, header, footer {
   border: 1px solid lightgray;
