--- a/Prototype/Styles/CKstyle.css
+++ b/Prototype/Styles/CKstyle.css
@@ -15,7 +15,9 @@ body {
 }
 
 
-/*------------HEADER-----------*/
+/*------------Top Nav-----------*/
+
+/*
 
 header {
   background-color: rgb(152,201,171);
@@ -43,12 +45,76 @@ header h1 {
   float: left;
   padding-top: 20px;
 }
+*/
 
+
+
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: rgb(152,201,171);
+  position: relative;
+  font-family: "Poppins";
+}
+
+.topnav img {
+  width: 70%;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 1.2em;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+.topnav a.icon:hover {
+  background-color: blue;
+}
+
+
+/* Add background color on mouse-over */
+
+.topnav ul {
+  list-style: none;
+  padding: 0px;
+  font-family: "Poppins";
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.topnav ul li a:hover {
+background-color: rgb(93,139,200);
+}
+
+
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: rgb(152,201,171);
+}
 
 /*-----------EVERYTHING ELSE----------*/
 
-div, section, main, aside, header, footer {
-  border: 1px solid lightgray;
+section, main, aside, header, footer {
   padding: .5em;
   margin-bottom: 1em;
   font-family: "Poppins", Helvetica, sans-serif;
@@ -56,4 +122,54 @@ div, section, main, aside, header, footer {
 
 p, ul {
   font-family: "Alegreya", serif;
+}
+
+h2 {
+  color: rgb(152,201,171);
+  font-size: 1.2em;
+}
+
+
+
+/*--------------HOME PAGE---------------*/
+
+
+/*----Slider----*/
+.home-slider img{
+  width: 25%;
+}
+
+
+
+
+.grow img {
+  width: 100%;
+  padding-top: 25px;
+}
+
+.engage img {
+  width: 100%;
+  padding-top: 25px;
+}
+
+a {
+  color: rgb(93,139,200);
+}
+
+a:hover {
+  color: rgb(223,184,62);
+}
+
+.testimonials ul {
+  list-style: none;
+  border-left: 2px dotted rgb(93,139,200);
+  padding-left: 15px;
+}
+
+.testimonials ul li {
+  padding-top: 15px;
+}
+
+.testimonials ul li span {
+  font-style: italic;
 }
